@@ -1,3 +1,12 @@
+2003-04-01  Vince Darley <vincentdarley@sourceforge.net>
+
+        * generic/vfs.c: added #include tclInt.h given recent Tcl
+        changes which broke compilation.
+
+        Fix to privately reported vfs bug with 'glob -type d -dir .  *'
+        across a vfs boundary.  No tests for this are currently possible
+        without effectively moving tclvfs into Tcl's test suite.
+
 2003-11-10  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* configure: regen
